; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_base.c_ppb_init_callout.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ppbus/extr_ppb_base.c_ppb_init_callout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.callout = type { i32 }
%struct.ppb_data = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ppb_init_callout(i32 %0, %struct.callout* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.callout*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.ppb_data*, align 8
  store i32 %0, i32* %4, align 4
  store %struct.callout* %1, %struct.callout** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i32, i32* %4, align 4
  %9 = call %struct.ppb_data* @DEVTOSOFTC(i32 %8)
  store %struct.ppb_data* %9, %struct.ppb_data** %7, align 8
  %10 = load %struct.callout*, %struct.callout** %5, align 8
  %11 = load %struct.ppb_data*, %struct.ppb_data** %7, align 8
  %12 = getelementptr inbounds %struct.ppb_data, %struct.ppb_data* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @callout_init_mtx(%struct.callout* %10, i32 %13, i32 %14)
  ret void
}

declare dso_local %struct.ppb_data* @DEVTOSOFTC(i32) #1

declare dso_local i32 @callout_init_mtx(%struct.callout*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
